<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/settings_btn_title_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:contentDescription="@string/back_button"
            app:icon="@drawable/back_icon"
            app:iconPadding="@dimen/padding_mini_icons"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="RtlHardcoded,VisualLintButtonSize"

            />

        <TextView
            style="@style/settings_btn_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <Switch
            style="@style/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nigt_theme"
            tools:ignore="NestedWeights,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

        <Button
            style="@style/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/share"
            app:icon="@drawable/light_mode_share"
            app:iconGravity="end"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize"

            />

        <Button

            style="@style/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/support"
            app:icon="@drawable/light_mode_support"
            app:iconGravity="end"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize"

            />

        <Button
            style="@style/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/terms_of_use"
            app:icon="@drawable/light_mode_arrow_forward"
            app:iconGravity="end"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </LinearLayout>
</LinearLayout>