<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            style="@style/Btn"
            android:id="@+id/search_button"
            android:text="@string/search"
            app:cornerRadius="@dimen/corner_radius_mini_icons"
            app:icon="@drawable/light_mode_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_mini_icons"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/Btn"
            android:id="@+id/mediateka_button"
            android:text="@string/media_library"
            app:cornerRadius="@dimen/corner_radius_mini_icons"
            app:icon="@drawable/light_mode_mediateka"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_mini_icons"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button

            style="@style/Btn"
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:cornerRadius="@dimen/corner_radius_mini_icons"
            app:icon="@drawable/light_mode_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_mini_icons"
            app:iconSize="@dimen/size_mini_icons"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />


    </LinearLayout>

</LinearLayout>